# chromadb-retriever-mcp

./: .gitignore  Dockerfile  README.md  docker-compose.yml  k8s-deployment.yaml  main.py  prompt.md  pyproject.toml
artefacts/: implementation_plan.md  implementation_plan_next.md  walkthrough.md  walkthrough_next.md
src/: api.py  database.py  ingestor.py  retriever.py  server.py
tests/: dump_records.py  test_auth.py  test_client.py  test_direct_retrieve.py
