[project]
name = "chromadb-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.5",
    "fastapi>=0.135.1",
    "mcp>=1.26.0",
    "north-mcp-python-sdk @ git+https://github.com/cohere-ai/north-mcp-python-sdk.git",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "sentence-transformers>=5.3.0",
    "uvicorn>=0.42.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
